# BayesBench

./: .gitignore  README.md  pyproject.toml
configs/: ackley_all.yaml  ackley_gp_ei.yaml  ackley_gp_lcb.yaml  ackley_random_search.yaml  branin_all.yaml  branin_gp_ei.yaml  branin_gp_lcb.yaml  branin_random_search.yaml
results/branin/: branin_random_search.csv
src/bayesbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bayesbench/acquisition/: expected_improvement.py
src/bayesbench/acquisition_functions/: lower_confidence_bound.py
src/bayesbench/benchmarks/: ackley.py  branin.py
src/bayesbench/experiments/: regression.py  run_ackley.py  run_branin.py  run_experiments.py  run_from_config.py
src/bayesbench/optimizers/: gp.py  gp_ei.py  gp_lcb.py  random_search.py
src/bayesbench/visualization/: plot.py  plot_ackley.py  plot_branin.py
